deploy: 249a3cc37347c67aeeebd1fb132a198da1753cc0

--- a/submissions.html
+++ b/submissions.html
@@ -2318,11 +2318,11 @@ written for the R Journal) describes various article elements and Rmarkdown synt
 <li>If the submission passes the second test, it will be sent our for review. This process might take several months.
 You will receive one or more reviews, possibly with notes from one of the (associate) editors, and a <em>verdict</em>. There are four possible verdicts:
 <ul>
-<li><em>Accepted</em> Congratulations. Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and
+<li><em>Accepted</em> Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and
 you will receive a print proof before publication.</li>
 <li><em>Minor revisions</em> The paper can be accepted conditional on a number of smaller revisions in the manuscript and/or the code. You are expected to fix
 these issies within three months, and resubmit along with a letter where you describe, point-by-point, how the comments of the reviewers have been
-addressed. The paper will not be reviewed again by peer reviewers.</li>
+addressed. The paper will not be reviewed again by peer reviewers, but the editor will check whether the points have been sufficiently addressed.</li>
 <li><em>Major revisions</em> The manuscript and/or the code need severe updates before the manuscript can be accepted for publication. You are expected to
 fix the issies within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been
 addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.</li>
