updated affiliation on request of the authors

--- a/_articles/RJ-2023-056/RJ-2023-056.html
+++ b/_articles/RJ-2023-056/RJ-2023-056.html
@@ -148,7 +148,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <meta name="citation_online_date" content="2023/11/01"/>
   <meta name="citation_publication_date" content="2023/11/01"/>
   <meta name="citation_author" content="L.H. Vanegas"/>
-  <meta name="citation_author_institution" content="Departamento de Estadística, Universidad Nacional"/>
+  <meta name="citation_author_institution" content="Departamento de Estadística, Universidad Nacional de Colombia"/>
   <meta name="citation_author" content="L.M. Rondón"/>
   <meta name="citation_author_institution" content="Departamento de Estadística, Universidad Nacional"/>
   <meta name="citation_author" content="G.A. Paula"/>
