deploy: cf41273f891134a83a7a96bc60ec3be9b9a4e3ec

--- a/index.html
+++ b/index.html
@@ -2343,7 +2343,6 @@ rejected, in progress or accepted/published. Papers labelled ‘in progress’ a
 <li>Yanfei Kang, Beihang University, China</li>
 <li>Ursula Laa, BOKU Vienna, Austria</li>
 <li>Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland</li>
-<li>Romain Lesur, INSEE, France</li>
 <li>Jouni Helske, University of Turku, Finland</li>
 <li>Christoph Sax, Cynkra, Switzerland</li>
 <li>Thomas Fung, Macquarie University, Australia</li>
@@ -2369,6 +2368,7 @@ Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
 Hurley (2022), Simon Urbanek (2023)</p>
 <h3 id="past-associate-editors">Past Associate Editors</h3>
 <ul>
+<li>Romain Lesur, INSEE, France (2024)</li>
 <li>Earo Wang (2020-2022)</li>
 <li>Beth Atkinson (2020-2022)</li>
 <li>Kieran Healy (2021-2022)</li>
