deploy: 7edf0a488e0d0dbcc6808d6e75d27ee7a9d4dd02

--- a/articles.html
+++ b/articles.html
@@ -2460,7 +2460,7 @@ when a latent grouping structure is present.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img src="articles/RJ-2024-011/figs/data-model.png"/>
 </div>
 <div class="description">
 <h2>BMRMM: An R Package for Bayesian Markov (Renewal) Mixed Models</h2>
