--- a/issues/2023-2/index.html
+++ b/issues/2023-2/index.html
@@ -21,7 +21,7 @@
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css" data-origin="pandoc">
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
@@ -32,7 +32,7 @@ div.sourceCode { overflow: auto; }
 }
 @media print {
 pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
+pre > code.sourceCode > span { display: inline-block; text-indent: -5em; padding-left: 5em; }
 }
 pre.numberSource code
   { counter-reset: source-line 0; }
@@ -91,6 +91,19 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     $(function() {
       console.log("Starting...")
 
+      // Mathjax config (add automatic linebreaks when supported)
+      // MathJax = {
+      //    tex: {
+      //        inlineMath: [['$', '$'], ['\\(', '\\)']],
+      //        displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      //        tags: 'ams',
+      //        multline: true,
+      //    },
+      //    options: {
+      //        linebreaks: { automatic: true },
+      //    },
+      // };
+
       // Always show Published - distill hides it if not set
       function show_byline_column(caption) {
         $('d-byline').find('h3:contains("' + caption + '")').parent().css('visibility', 'visible');
@@ -121,13 +134,19 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
       buttons.append('<a href="' + slug + '.pdf" class="dt-tag"><i class="fas fa-file-pdf"></i> PDF</a>')
       buttons.append('<a href="' + slug + '.zip" class="dt-tag"><i class="fas fa-file-zipper"></i> Supplement</a>')
 
-
-      const abstract = $('<d-abstract>')
-      abstract.append('<b>Abstract:</b><br>')
-      abstract.append($("d-title p:not(:empty)").first()) // Move description to d-abstract
-      $("d-title p:empty").remove() // Remove empty paragraphs after title
-      abstract.append(buttons)
-      abstract.insertAfter($('d-title')) // Add abstract section after title
+      // adds Abstract: in front of the first <p> in the title section --
+      // unless it happens to be the subtitle (FIXME: this is a bad hack - can't distill do this?)
+      var tpar = $("d-title p:not(:empty)").filter(function() {
+        return !$(this).hasClass("subtitle");
+      }).first();
+      if (tpar) {
+        const abstract = $('<d-abstract>')
+        abstract.append('<b>Abstract:</b><br>')
+        abstract.append(tpar) // Move description to d-abstract
+        $("d-title p:empty").remove() // Remove empty paragraphs after title
+        abstract.append(buttons)
+        abstract.insertAfter($('d-title')) // Add abstract section after title */
+      }
 
       // tweak by-line
       var byline = $("d-byline div.byline")
@@ -225,7 +244,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     .header-section-number {
       margin-right: 0.5em;
     }
-    
+
     d-appendix .citation-appendix,
     .d-appendix .citation-appendix {
       color: rgb(60, 60, 60);
@@ -2347,7 +2366,7 @@ d-appendix d-footnote-list a.footnote-backlink {
   color: var(--hover-color, white);
 }</style>
 <!--/radix_placeholder_distill-->
-  <script src="../../site_libs/header-attrs-2.25/header-attrs.js"></script>
+  <script src="../../site_libs/header-attrs-2.29/header-attrs.js"></script>
   <script src="../../site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <script src="../../site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="../../site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
@@ -2418,26 +2437,26 @@ d-appendix d-footnote-list a.footnote-backlink {
 <path d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"></path>
 </svg></a></p>
 <h2 id="table-of-contents">Table of contents</h2>
-<p><a href="../../news/RJ-2023-2-editorial">Editorial</a><br>Simon Urbanek 3</p>
+<p><a href="../../news/RJ-2023-2-editorial/">Editorial</a><br>Simon Urbanek 3</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
-<p><a href="../../articles/RJ-2023-040">nlstac: Non-Gradient Separable Nonlinear Least Squares Fitting</a><br>J. A. F. Torvisco, R. Benítez, M. R. Arias and J. Cabello Sánchez 5</p>
-<p><a href="../../articles/RJ-2023-041">hydrotoolbox, a Package for Hydrometeorological Data Management</a><br>Ezequiel Toum and Pierre Pitte 25</p>
-<p><a href="../../articles/RJ-2023-042">bqror: An R package for Bayesian Quantile Regression in Ordinal Models</a><br>Prajual Maheshwari and Mohammad Arshad Rahman 39</p>
-<p><a href="../../articles/RJ-2023-043">Gaussian Mixture Models in R</a><br>Bastien Chassagnol, Antoine Bichat, Cheïma Boudjeniba, Pierre-Henri Wuillemin, Mickaël Guedj, David Gohel, Gregory Nuel and Etienne Becht 56</p>
-<p><a href="../../articles/RJ-2023-047">mutualinf: An R Package for Computing and Decomposing the Mutual Information Index of Segregation</a><br>Rafael Fuentealba-Chaura, Daniel Guinea-Martin, Ricardo Mora and Julio Rojas-Mora 77</p>
-<p><a href="../../articles/RJ-2023-055">A Workflow for Estimating and Visualising Excess Mortality During the COVID-19 Pandemic</a><br>Garyfallos Konstantinoudis, Virgilio Gómez-Rubio, Michela Cameletti, Monica Pirani, Gianluca Baio and Marta Blangiardo 89</p>
-<p><a href="../../articles/RJ-2023-056">Generalized Estimating Equations using the new R package glmtoolbox</a><br>L.H. Vanegas, L.M. Rondón and G.A. Paula 105</p>
-<p><a href="../../articles/RJ-2023-057">clustAnalytics: An R Package for Assessing Stability and Significance of Communities in Networks</a><br>Martí Renedo-Mirambell and Argimiro Arratia 134</p>
-<p><a href="../../articles/RJ-2023-044">PINstimation: An R Package for Estimating Probability of Informed Trading Models</a><br>Montasser Ghachem and Oguz Ersan 145</p>
-<p><a href="../../articles/RJ-2023-045">EviewsR: An R Package for Dynamic and Reproducible Research Using EViews, R, R Markdown and Quarto</a><br>Sagiru Mati, Irfan Civcir and S. I. Abba 169</p>
-<p><a href="../../articles/RJ-2023-046">langevitour: Smooth Interactive Touring of High Dimensions, Demonstrated with scRNA-Seq Data</a><br>Paul Harrison 206</p>
-<p><a href="../../articles/RJ-2023-048">ggdensity: Improved Bivariate Density Visualization in R</a><br>James Otto and David Kahle 220</p>
-<p><a href="../../articles/RJ-2023-049">Three-Way Correspondence Analysis in R</a><br>Rosaria Lombardo, Michel van de Velden and Eric J. Beh 237</p>
-<p><a href="../../articles/RJ-2023-050">Estimating Heteroskedastic and Instrumental Variable Models for Binary Outcome Variables in R</a><br>Mauricio Sarrias 263</p>
-<p><a href="../../articles/RJ-2023-051">genpathmox: An R Package to Tackle Numerous Categorical Variables and Heterogeneity in Partial Least Squares Structural Equation Modeling</a><br>Giuseppe Lamberti, 294</p>
-<p><a href="../../articles/RJ-2023-052">Taking the Scenic Route: Interactive and Performant Tour Animations</a><br>Casper Hart and Earo Wang 309</p>
-<p><a href="../../articles/RJ-2023-053">Identifying Counterfactual Queries with the R Package cfid</a><br>Santtu Tikka 332</p>
-<p><a href="../../articles/RJ-2023-054">vivid: An R package for Variable Importance and Variable Interactions Displays for Machine Learning Models</a><br>Alan Inglis, Andrew Parnell and Catherine Hurley 346</p>
+<p><a href="../../articles/RJ-2023-040/">nlstac: Non-Gradient Separable Nonlinear Least Squares Fitting</a><br>J. A. F. Torvisco, R. Benítez, M. R. Arias and J. Cabello Sánchez 5</p>
+<p><a href="../../articles/RJ-2023-041/">hydrotoolbox, a Package for Hydrometeorological Data Management</a><br>Ezequiel Toum and Pierre Pitte 25</p>
+<p><a href="../../articles/RJ-2023-042/">bqror: An R package for Bayesian Quantile Regression in Ordinal Models</a><br>Prajual Maheshwari and Mohammad Arshad Rahman 39</p>
+<p><a href="../../articles/RJ-2023-043/">Gaussian Mixture Models in R</a><br>Bastien Chassagnol, Antoine Bichat, Cheïma Boudjeniba, Pierre-Henri Wuillemin, Mickaël Guedj, David Gohel, Gregory Nuel and Etienne Becht 56</p>
+<p><a href="../../articles/RJ-2023-047/">mutualinf: An R Package for Computing and Decomposing the Mutual Information Index of Segregation</a><br>Rafael Fuentealba-Chaura, Daniel Guinea-Martin, Ricardo Mora and Julio Rojas-Mora 77</p>
+<p><a href="../../articles/RJ-2023-055/">A Workflow for Estimating and Visualising Excess Mortality During the COVID-19 Pandemic</a><br>Garyfallos Konstantinoudis, Virgilio Gómez-Rubio, Michela Cameletti, Monica Pirani, Gianluca Baio and Marta Blangiardo 89</p>
+<p><a href="../../articles/RJ-2023-056/">Generalized Estimating Equations using the new R package glmtoolbox</a><br>L.H. Vanegas, L.M. Rondón and G.A. Paula 105</p>
+<p><a href="../../articles/RJ-2023-057/">clustAnalytics: An R Package for Assessing Stability and Significance of Communities in Networks</a><br>Martí Renedo-Mirambell and Argimiro Arratia 134</p>
+<p><a href="../../articles/RJ-2023-044/">PINstimation: An R Package for Estimating Probability of Informed Trading Models</a><br>Montasser Ghachem and Oguz Ersan 145</p>
+<p><a href="../../articles/RJ-2023-045/">EviewsR: An R Package for Dynamic and Reproducible Research Using EViews, R, R Markdown and Quarto</a><br>Sagiru Mati, Irfan Civcir and S. I. Abba 169</p>
+<p><a href="../../articles/RJ-2023-046/">langevitour: Smooth Interactive Touring of High Dimensions, Demonstrated with scRNA-Seq Data</a><br>Paul Harrison 206</p>
+<p><a href="../../articles/RJ-2023-048/">ggdensity: Improved Bivariate Density Visualization in R</a><br>James Otto and David Kahle 220</p>
+<p><a href="../../articles/RJ-2023-049/">Three-Way Correspondence Analysis in R</a><br>Rosaria Lombardo, Michel van de Velden and Eric J. Beh 237</p>
+<p><a href="../../articles/RJ-2023-050/">Estimating Heteroskedastic and Instrumental Variable Models for Binary Outcome Variables in R</a><br>Mauricio Sarrias 263</p>
+<p><a href="../../articles/RJ-2023-051/">genpathmox: An R Package to Tackle Numerous Categorical Variables and Heterogeneity in Partial Least Squares Structural Equation Modeling</a><br>Giuseppe Lamberti, 294</p>
+<p><a href="../../articles/RJ-2023-052/">Taking the Scenic Route: Interactive and Performant Tour Animations</a><br>Casper Hart and Earo Wang 309</p>
+<p><a href="../../articles/RJ-2023-053/">Identifying Counterfactual Queries with the R Package cfid</a><br>Santtu Tikka 332</p>
+<p><a href="../../articles/RJ-2023-054/">vivid: An R package for Variable Importance and Variable Interactions Displays for Machine Learning Models</a><br>Alan Inglis, Andrew Parnell and Catherine Hurley 346</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
