deploy: 551a3f50d0fc2ac89252ac3ccf9eec7ab21545fb

--- a/index.html
+++ b/index.html
@@ -2272,8 +2272,8 @@ p > span.doi, td > span.doi {
   min-width: 120px;
 }
 .update {
-  background-color: hsla(24, 100%, 50%, 0.05); 
-  border-left: 3px solid hsl(24, 100%, 50%); 
+  background-color: hsla(24, 100%, 50%, 0.05);
+  border-left: 3px solid hsl(24, 100%, 50%);
   padding-left: 1em;
 }
 </style>
@@ -2348,6 +2348,10 @@ rejected, in progress or accepted/published. Papers labelled ‘in progress’ a
 <li>Xiaoqian Wang, Monash University, Australia</li>
 <li>Ivan Svetunkov, Lancaster University, UK</li>
 <li>Wenjie Wang, Eli Lilly and Company, USA</li>
+</ul>
+<h3 id="technical-editor">Technical editor</h3>
+<ul>
+<li>Mitchell O’Hara-Wild, Nectric, Australia</li>
 </ul>
 <h3 id="editorial-advisory-board">Editorial advisory board</h3>
 <ul>
