--- a/index.html
+++ b/index.html
@@ -2314,44 +2314,44 @@ Just a very small number of 2021 submissions await a final decision, and even fo
 rejected, in progress or accepted/published. Papers labelled ‘in progress’ are under review or awaiting revisions.</p>
 <h2 id="editorial-board">Editorial board</h2>
 <h3 id="editor-in-chief">Editor-in-Chief</h3>
-<p>Rob Hyndman, Monash University, Australia <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
+<p><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
 <h3 id="executive-editors">Executive editors</h3>
 <ul>
-<li>Emily Zabor, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.</li>
-<li>Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands</li>
-<li>Emi Tanaka, Australian National University, Australia</li>
+<li><a href="https://www.emilyzabor.com">Emily Zabor</a>, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.</li>
+<li><a href="https://www.markvanderloo.eu">Mark van der Loo</a>, Statistics Netherlands and University of Leiden, The Netherlands</li>
+<li><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia</li>
 </ul>
 <h3 id="associate-editors">Associate editors</h3>
 <ul>
-<li>Rafael de Andrade Moral, Maynooth University, Ireland</li>
-<li>Vincent Arel-Bundock, University of Montreal, Canada</li>
-<li>Rasmus Bååth, Lund University, Sweden</li>
-<li>Przemek Biecek, University of Warsaw, Poland</li>
-<li>Chris Brunsdon, Maynooth University, Ireland</li>
-<li>Kevin Burke, University of Limerick, Ireland</li>
-<li>Mine Çetinkaya-Rundel, Duke University, USA</li>
-<li>Xiaoyue Cheng, University of Nebraska, Omaha, USA</li>
-<li>Katarina Domijan, Maynooth University, Ireland</li>
-<li>Isabella Gollini, University College Dublin, Ireland</li>
-<li>Michael Kane, Yale University, USA</li>
-<li>Adam Loy, Carleton College, USA</li>
-<li>Nicholas Tierney, Telethon Kids, Australia</li>
-<li>Susan Vanderplas, University of Nebraska, Lincoln, USA</li>
-<li>Lucy D’Agostino McGowan, Wake Forest University, USA</li>
-<li>Yanfei Kang, Beihang University, China</li>
-<li>Ursula Laa, BOKU Vienna, Austria</li>
-<li>Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland</li>
-<li>Jouni Helske, University of Turku, Finland</li>
-<li>Christoph Sax, Cynkra, Switzerland</li>
-<li>Thomas Fung, Macquarie University, Australia</li>
-<li>Thiyanga Talagala, University of Sri Jayewardenepura, Sri Lanka</li>
-<li>Xiaoqian Wang, Monash University, Australia</li>
-<li>Ivan Svetunkov, Lancaster University, UK</li>
-<li>Wenjie Wang, Eli Lilly and Company, USA</li>
+<li><a href="https://rafamoral.github.io">Rafael de Andrade Moral</a>, Maynooth University, Ireland</li>
+<li><a href="https://arelbundock.com">Vincent Arel-Bundock</a>, University of Montreal, Canada</li>
+<li><a href="https://www.sumsar.net">Rasmus Bååth</a>, Lund University, Sweden</li>
+<li><a href="https://pbiecek.github.io">Przemek Biecek</a>, University of Warsaw, Poland</li>
+<li><a href="https://www.maynoothuniversity.ie/faculty-social-sciences/our-people/chris-brunsdon">Chris Brunsdon</a>, Maynooth University, Ireland</li>
+<li><a href="https://kevinburke.ie">Kevin Burke</a>, University of Limerick, Ireland</li>
+<li><a href="https://mine-cr.com">Mine Çetinkaya-Rundel</a>, Duke University, USA</li>
+<li><a href="https://chxy.github.io">Xiaoyue Cheng</a>, University of Nebraska, Omaha, USA</li>
+<li><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/katarina-domijan">Katarina Domijan</a>, Maynooth University, Ireland</li>
+<li><a href="https://igollini.github.io">Isabella Gollini</a>, University College Dublin, Ireland</li>
+<li><a href="https://campuspress.yale.edu/fdstest/michael-j-kane/">Michael Kane</a>, Yale University, USA</li>
+<li><a href="https://aloy.rbind.io">Adam Loy</a>, Carleton College, USA</li>
+<li><a href="https://www.njtierney.com">Nicholas Tierney</a>, Telethon Kids, Australia</li>
+<li><a href="https://srvanderplas.github.io">Susan Vanderplas</a>, University of Nebraska, Lincoln, USA</li>
+<li><a href="https://www.lucymcgowan.com">Lucy D’Agostino McGowan</a>, Wake Forest University, USA</li>
+<li><a href="https://yanfei.site">Yanfei Kang</a>, Beihang University, China</li>
+<li><a href="https://uschilaa.github.io">Ursula Laa</a>, BOKU Vienna, Austria</li>
+<li><a href="https://www.fhnw.ch/de/personen/matthias-templ">Matthias Templ</a>, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland</li>
+<li><a href="https://jounihelske.netlify.app">Jouni Helske</a>, University of Turku, Finland</li>
+<li><a href="https://github.com/christophsax">Christoph Sax</a>, Cynkra, Switzerland</li>
+<li><a href="https://github.com/thomas-fung">Thomas Fung</a>, Macquarie University, Australia</li>
+<li><a href="https://thiyanga.netlify.app">Thiyanga Talagala</a>, University of Sri Jayewardenepura, Sri Lanka</li>
+<li><a href="https://xqnwang.rbind.io">Xiaoqian Wang</a>, Monash University, Australia</li>
+<li><a href="https://github.com/config-i1/">Ivan Svetunkov</a>, Lancaster University, UK</li>
+<li><a href="https://wwenjie.org">Wenjie Wang</a>, Eli Lilly and Company, USA</li>
 </ul>
 <h3 id="technical-editor">Technical editor</h3>
 <ul>
-<li>Mitchell O’Hara-Wild, Nectric, Australia</li>
+<li><a href="https://mitchelloharawild.com">Mitchell O’Hara-Wild</a>, Nectric, Australia</li>
 </ul>
 <h3 id="editorial-advisory-board">Editorial advisory board</h3>
 <ul>
