--- a/index.html
+++ b/index.html
@@ -2348,6 +2348,7 @@ rejected, in progress or accepted/published. Papers labelled ‘in progress’ a
 <li><a href="https://xqnwang.rbind.io">Xiaoqian Wang</a>, Monash University, Australia</li>
 <li><a href="https://github.com/config-i1/">Ivan Svetunkov</a>, Lancaster University, UK</li>
 <li><a href="https://wwenjie.org">Wenjie Wang</a>, Eli Lilly and Company, USA</li>
+<li><a href="https://www.robinlovelace.net">Robin Lovelace</a>, University of Leeds, UK</li>
 </ul>
 <h3 id="technical-editor">Technical editor</h3>
 <ul>
