deploy: b5a286ad234dec4eecc07ac7516e6182adb9519a

--- a/index.html
+++ b/index.html
@@ -2299,8 +2299,7 @@ p > span.doi, td > span.doi {
 <h2 id="history">History</h2>
 <p>The R Journal was established in 2009, superseding the <a href="http://www.r-project.org/doc/Rnews/index.html">R News</a>. For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activities and conference reports.</p>
 <h2 id="r-journal-article-summaries-for-the-last-four-years">R Journal article summaries, for the last four years</h2>
-<p>The R Journal receives a large number of submissions, currently over 200 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.
-Just a very small number of 2021 submissions await a final decision, and even for 2022 submissions, the majority of articles have received an accept/reject decision.</p>
+<p>The R Journal receives a large number of submissions, currently around 150 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.</p>
 <div class="layout-chunk" data-layout="l-body">
 
 </div>
