deploy: 1732d84ea9e06d0b77573096d6cc1dc5c50ffc9e

--- a/editors.html
+++ b/editors.html
@@ -90,7 +90,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_meta_tags-->
   <title>Editorial board</title>
 
-  <meta property="description" itemprop="description" content="Details of the R Journal editorial board and advisory board"/>
 
   <link rel="icon" type="image/vnd.microsoft.icon" href="resources/favicon.ico"/>
 
@@ -98,20 +97,18 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
   <meta property="og:title" content="Editorial board"/>
   <meta property="og:type" content="article"/>
-  <meta property="og:description" content="Details of the R Journal editorial board and advisory board"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="The R Journal"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
   <meta property="twitter:title" content="Editorial board"/>
-  <meta property="twitter:description" content="Details of the R Journal editorial board and advisory board"/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description"]}},"value":[{"type":"character","attributes":{},"value":["Editorial board"]},{"type":"character","attributes":{},"value":["Details of the R Journal editorial board and advisory board"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title"]}},"value":[{"type":"character","attributes":{},"value":["Editorial board"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -2189,7 +2186,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"Editorial board","description":"Details of the R Journal editorial board and advisory board","authors":[]}
+{"title":"Editorial board","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -2225,13 +2222,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 <!--radix_placeholder_categories-->
 <!--/radix_placeholder_categories-->
-<p><p>Details of the R Journal editorial board and advisory board</p></p>
+
 </div>
 
 
 <div class="d-article">
+<div class="layout-chunk" data-layout="l-body">
+<style type="text/css">
+d-article > * {
+    grid-column: page;
+}
+</style>
+</div>
 <h2 id="editor-in-chief">Editor-in-Chief</h2>
-<p><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
+<p><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia. <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
 <h2 id="executive-editors">Executive editors</h2>
 <ul>
 <li><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia</li>
