--- a/submissions.html
+++ b/submissions.html
@@ -2234,16 +2234,7 @@ d-article > * {
 }
 </style>
 </div>
-<p>Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. The submission needs to include:</p>
-<ul>
-<li>files to build the article including the <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code>, figures, and the output files <code>.html</code>, <code>.pdf</code>.</li>
-<li>files to reproduce the results presented in the paper, including R scripts, and data.</li>
-<li>a motivating letter that describes why your paper is suitable for consideration by the R Journal.</li>
-<li>if needed, supplementary files that might include additional technical details or examples.</li>
-</ul>
-<div class="rj-blue">
-Read the information below on the requirements for files and format and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
-</div>
+<p>Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere.</p>
 <h1 id="creating-your-article">Creating your article</h1>
 <p>We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the <a href="https://rjournal.github.io/rjtools/">rjtools package</a> is preferred.</p>
 <h3 id="rmarkdown-using-rjtools">Rmarkdown using rjtools</h3>
@@ -2253,7 +2244,7 @@ Read the information below on the requirements for files and format and then <st
 <p>Creative uses of interactive content in HTML formatted articles is encouraged. This will require conditional evaluation of code chunks with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.</p>
 <p>Figures and tables should have alt-text in chunk specifications, to assist with accessibility.</p>
 <h3 id="rmarkdown-using-rticles">Rmarkdown using rticles</h3>
-<p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. We therefore ask that you use <code>rjtools</code> instead of <code>rticles</code>.</p>
+<p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. Please use <code>rjtools</code> instead of <code>rticles</code>.</p>
 <h3 id="latex-format">LaTeX format</h3>
 <p>Articles can also be written using the <a href="https://journal.r-project.org/share/RJtemplate.zip">LaTeX template</a>. Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
 <p>LaTeX submissions must compile with pdflatex. Please use as few LaTeX packages as possible. The template already includes several commonly-used packages such as <code>amsmath</code>, <code>booktabs</code>, <code>tikz</code>, etc. Do not use your own styles, fonts, or syntax colouring.</p>
@@ -2275,32 +2266,23 @@ Read the information below on the requirements for files and format and then <st
 </ul></li>
 <li>Each of these can also be run individually.</li>
 </ul>
-<h1 id="file-format-for-submission">File format for submission</h1>
-<h3 id="new-submission">New submission</h3>
-<p>To submit a new article to the R Journal, you will need to complete a form providing these details:</p>
+<h1 id="submitting-your-article">Submitting your article</h1>
+<p>To submit an article to the R Journal, you will need to complete <a href="https://forms.gle/ykj6QcoGQD5ctnA5A">this form</a>.</p>
+<p>Your files will need to be uploaded in a zip file that should contain:</p>
 <ul>
-<li>Your name.</li>
-<li>An email address for the corresponding author. Try to ensure it is an address that will be available in the long term, through the review process and after the paper is published so that readers can contact you about your work if desired.</li>
-<li>An alternate email address, in case email to the primary address doesn’t respond to editors requests.</li>
-<li>Names of all authors.</li>
-<li>Article title.</li>
-<li>Article type.</li>
-<li>Article keywords/tags. You should be prepared to select at least one or two from the list and you are free to add any additional words or phrases that accurately describe your paper.</li>
-<li><strong>Zip</strong> file containing:
-<ul>
-<li>finished paper files <code>.pdf</code> and <code>.html</code>.</li>
-<li>paper files to build the article including the <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code>, figures.</li>
-<li>file to reproduce the results, including R scripts, and data.</li>
-<li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
-<li>reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.</li>
-<li>a list of R packages needed to process the submission. This can be in the form of a file <code>_Rpackages.txt</code> with a list of packages, one per line.</li>
-</ul></li>
-<li><strong>A list of the reproducibility and supplementary files</strong>, exactly as they are placed in your paper directory, to be entered comma-delimited like <code>mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf</code>. This list is used to automatically build the <code>.zip</code> file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.</li>
+<li>The article in <code>.pdf</code> format.</li>
+<li>Files to build the article. If we can’t build the article from the source files (e.g., <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code> and figure files), it will be sent back to you.</li>
+<li>Files to reproduce the results, including R scripts, and data. If we can’t reproduce the results, it will be sent back to you.</li>
+<li>A motivating letter that describes why your paper is suitable for consideration by the R Journal.</li>
+<li>Other supplementary files that contain additional technical details or examples.</li>
+<li>A list of R packages needed to reproduce the submission. This can be in the form of a file <code>_Rpackages.txt</code> with a list of packages, one per line.</li>
 </ul>
-<p>You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a>.</p>
-<p>Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time. Papers that cannot be reproduced will not be considered.</p>
-<h1 id="what-happens-after-you-submit-a-paper">What happens after you submit a paper</h1>
-<p>Once you have submitted a paper, the editorial board will go through the following steps.</p>
+<p>You may have problems submitting if the size of your submission zip file is more than 10Mb. If you have large data files, you can make them available on an alternative site and provide the links in the paper.</p>
+<p>Please ensure that the submission can be reproduced in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.</p>
+<p>If you have problems, please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a>.</p>
+<p>Re-submissions and revisions to articles should be submitted in the same way. When providing a re-submission or revision, you will need to <strong>enter the identifier of the original submission</strong> in the last field of the submission form.</p>
+<h1 id="after-submitting-your-article">After submitting your article</h1>
+<p>Once you have submitted an article, the editorial board will go through the following steps.</p>
 <ol type="1">
 <li>Decide if your submission is technically in the correct format. In particular:
 <ul>
@@ -2323,7 +2305,6 @@ Read the information below on the requirements for files and format and then <st
 <li><strong>Reject</strong> Your paper is found to be unsuited for publication in the R Journal. No resubmission is allowed.</li>
 </ul></li>
 </ol>
-<p>Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link above). When providing a re-submission or revision, you will need to <strong>enter the identifier of the original submission</strong> in the last field of the submission form.</p>
 <h3 id="note-on-special-issue-articles">Note on special issue articles</h3>
 <p>Special issues may be created to cover topics of interest to the R community, or based on papers presented at an R conference.</p>
 <p>Please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a> if you would like to propose a special issue.</p>
