--- a/submissions.html
+++ b/submissions.html
@@ -2243,6 +2243,7 @@ d-article > * {
 <p>As far as possible, do not use specific HTML and LaTeX codes within your Rmd file. If you do need to write code specific to the HTML or PDF output, you can use <code>knitr::is_html_output()</code> and <code>knitr::is_latex_output()</code> to conditionally produce a particular output.</p>
 <p>Creative uses of interactive content in HTML formatted articles is encouraged. This will require conditional evaluation of code chunks with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.</p>
 <p>Figures and tables should have alt-text in chunk specifications, to assist with accessibility.</p>
+<p>Titles and abstract should be in plain text, with the abstract no more than 250 words.</p>
 <h3 id="rmarkdown-using-rticles">Rmarkdown using rticles</h3>
 <p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. Please use <code>rjtools</code> instead of <code>rticles</code>.</p>
 <h3 id="latex-format">LaTeX format</h3>
