--- a/_articles/RJ-2024-001/RJ-2024-001.html
+++ b/_articles/RJ-2024-001/RJ-2024-001.html
@@ -2440,6 +2440,19 @@ distill-header .nav a {
     $(function() {
       console.log("Starting...")
 
+      // Mathjax config (add automatic linebreaks when supported)
+      // MathJax = {
+      //    tex: {
+      //        inlineMath: [['$', '$'], ['\\(', '\\)']],
+      //        displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      //        tags: 'ams',
+      //        multline: true,
+      //    },
+      //    options: {
+      //        linebreaks: { automatic: true },
+      //    },
+      // };
+
       // Always show Published - distill hides it if not set
       function show_byline_column(caption) {
         $('d-byline').find('h3:contains("' + caption + '")').parent().css('visibility', 'visible');
@@ -2472,11 +2485,13 @@ distill-header .nav a {
 
       // adds Abstract: in front of the first <p> in the title section --
       // unless it happens to be the subtitle (FIXME: this is a bad hack - can't distill do this?)
-      var tpar = $("d-title p:not(:empty)").first();
-      if (tpar && ! tpar.hasClass("subtitle")) {
+      var tpar = $("d-title p:not(:empty)").filter(function() {
+        return !$(this).hasClass("subtitle");
+      }).first();
+      if (tpar) {
         const abstract = $('<d-abstract>')
         abstract.append('<b>Abstract:</b><br>')
-        abstract.append($("d-title p:not(:empty)").first()) // Move description to d-abstract
+        abstract.append(tpar) // Move description to d-abstract
         $("d-title p:empty").remove() // Remove empty paragraphs after title
         abstract.append(buttons)
         abstract.insertAfter($('d-title')) // Add abstract section after title */
