deploy: 3f14921de0ab63ee42c034ff53fb2378211afd9b

--- a/articles.html
+++ b/articles.html
@@ -2761,7 +2761,7 @@ when a latent grouping structure is present.</p>
 <div class="description">
 <h2>BMRMM: An R Package for Bayesian Markov (Renewal) Mixed Models</h2>
 <div class="dt-tags"></div>
-<p>We introduce the [**BMRMM**](https://CRAN.R-project.org/package=BMRMM)
+<p>We introduce the BMRMM
 package implementing Bayesian inference for a class of Markov renewal
 mixed models which can characterize the stochastic dynamics of a
 collection of sequences, each comprising alternative instances of
@@ -2917,7 +2917,7 @@ providing favorable alternatives to modeling the mean of residual
 lifetimes. Despite these progresses, the lack of computer software
 that implements these methods remains an obstacle for researchers
 analyzing data in practice. In this paper, we introduce an R package
-[**qris**](https://CRAN.R-project.org/package=qris) [@R:qris], which
+qris, which
 implements methods for fitting semiparametric quantile regression
 models on residual life subject to right censoring. We demonstrate the
 effectiveness and versatility of this package through comprehensive
