deploy: 28abc17b86bc1423fd1f325d7ffbd3f919d7dc0a

--- a/editors.html
+++ b/editors.html
@@ -2272,7 +2272,7 @@ d-article > * {
 <li><a href="https://xqnwang.rbind.io">Xiaoqian Wang</a>, Monash University, Australia</li>
 <li><a href="https://wwenjie.org">Wenjie Wang</a>, Eli Lilly and Company, USA</li>
 <li><a href="https://fbe.unimelb.edu.au/our-people/staff/economics/tomasz-wozniak">Tomasz Woźniak</a>, University of Melbourne, Australia</li>
-<li><a href="https://scholar.google.com/citations?user=QI8GrFUAAAAJ&amp;hl=en">Julia Wrobel</a>, Emory University, USA</li>
+<li><a href="https://julia-wrobel.github.io">Julia Wrobel</a>, Emory University, USA</li>
 </ul>
 <h2 id="technical-editor">Technical editor</h2>
 <ul>
