deploy: 0b5c5661583ed5a2e8f9fc3a13fb98d33cd2d6b3

--- a/submissions.html
+++ b/submissions.html
@@ -2247,9 +2247,8 @@ d-article > * {
 <h3 id="rmarkdown-using-rticles">Rmarkdown using rticles</h3>
 <p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. Please use <code>rjtools</code> instead of <code>rticles</code>.</p>
 <h3 id="latex-format">LaTeX format</h3>
-<p>Articles can also be written using the <a href="https://journal.r-project.org/share/RJtemplate.zip">LaTeX template</a>. Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
-<p>LaTeX submissions must compile with pdflatex. Please use as few LaTeX packages as possible. The template already includes several commonly-used packages such as <code>amsmath</code>, <code>booktabs</code>, <code>tikz</code>, etc. Do not use your own styles, fonts, or syntax colouring.</p>
-<p>LaTeX submissions that do not follow these guidelines will be rejected without review.</p>
+<p>Articles can also be written using the <a href="https://journal.r-project.org/share/RJtemplate.zip">LaTeX template</a>. Instructions on using this template are provided in the <a href="https://journal.r-project.org/share/author-guide.pdf">LaTeX author guide</a>. LaTeX submissions that do not follow these guidelines will be rejected without review.</p>
+<p>The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
 <h1 id="checking-your-article">Checking your article</h1>
 <p>The <code>rjtools</code> package has a number of functions which can help you check that your article is ready to submit. These include:</p>
 <ul>
