deploy: 281b583f66ae0e53c0210fb926ae495bc0d94c1c

--- a/articles.html
+++ b/articles.html
@@ -2706,7 +2706,7 @@ also discussed.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img data-src="articles/RJ-2024-019/figures/call_3.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>Rfssa: An R Package for Functional Singular Spectrum Analysis</h2>
