--- a/articles.html
+++ b/articles.html
@@ -2764,7 +2764,7 @@ their future prospects for advancing the field in practice.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img data-src="articles/RJ-2024-014/pencal-RJ_files/figure-latex/kaplan-1.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>pencal: an R Package for the Dynamic Prediction of Survival with Many Longitudinal Predictors</h2>
