deploy: 9469fc894e0d6546e15124f882372ae097a44ce2

--- a/articles.html
+++ b/articles.html
@@ -2675,7 +2675,7 @@ Human Early Life Exposome Study (HELIX), to illustrate the workflow.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img data-src="articles/RJ-2024-016/flowchart3.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>FuzzySimRes: Epistemic Bootstrap -- an Efficient Tool for Statistical Inference Based on Imprecise Data</h2>
