deploy: 533d5f00e53a8be0f5f0ea795693d849a9877e17

--- a/articles.html
+++ b/articles.html
@@ -2675,7 +2675,7 @@ Human Early Life Exposome Study (HELIX), to illustrate the workflow.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2024-016/flowchart3.png"/>
 </div>
 <div class="description">
 <h2>FuzzySimRes: Epistemic Bootstrap -- an Efficient Tool for Statistical Inference Based on Imprecise Data</h2>
@@ -2706,7 +2706,7 @@ also discussed.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2024-019/figures/call_3.png"/>
 </div>
 <div class="description">
 <h2>Rfssa: An R Package for Functional Singular Spectrum Analysis</h2>
@@ -2764,7 +2764,7 @@ their future prospects for advancing the field in practice.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2024-014/pencal-RJ_files/figure-latex/kaplan-1.png"/>
 </div>
 <div class="description">
 <h2>pencal: an R Package for the Dynamic Prediction of Survival with Many Longitudinal Predictors</h2>
